# ung_dung_may_tinh

./: .Module.symvers.cmd  .dongco.ko.cmd  .dongco.mod.cmd  .dongco.mod.o.cmd  .dongco.o.cmd  .modules.order.cmd  Makefile  README.md  app  bcm2711-rpi-4-b.dts  dongco.c  dongco.h  dongco.ko  dongco.mod  dongco.mod.c  modules.order  motor_app.c  test_app.c
new_pid/: CMakeLists.txt  Main.qml  main.cpp  timing.cpp  timing.h
